--- a/shopweb/web/styles/style.css
+++ b/shopweb/web/styles/style.css
@@ -82,7 +82,7 @@ a.otherLink:active  { color:red; text-decoration:none; }
   position: relative;
 }
 
-.products_list ul li div {
+.products_list ul li div, .detail_box img {
   width:312px;
   height:356px;
 }
@@ -117,12 +117,24 @@ a.otherLink:active  { color:red; text-decoration:none; }
   font-weight: bold;
 }
 
-.product_detail_box {
-  position: relative;
-  background: #FFF;
-  padding: 20px;
-  width: auto;
-  width: 800px;
-  height: 400px;
-  margin: 20px auto;
+.thumb {
+  width: 104px;
+  height=104px;
+  float: left;
+}
+
+.center #pleft {
+  width: 312px;
+  float: left;
+}
+
+.center #pright {
+  width: 600px;
+  float: left;
+  margin-left: 20px;
+}
+
+#product_title {
+  width: 100%;
+  height: 40px;
 }
