--- a/shopweb/web/styles/style.css
+++ b/shopweb/web/styles/style.css
@@ -138,3 +138,27 @@ a.otherLink:active  { color:red; text-decoration:none; }
   width: 100%;
   height: 40px;
 }
+
+#cart_symbol {
+  width: 64px;
+  height: 64px;
+  float: right;
+}
+
+#cart_content {
+  width: 600px;
+  height: 300px;
+}
+
+#cart_popup {
+  display: block;
+  display: none;
+  background:#FFF;
+  border:solid 1px #BBBBBB;
+  border-radius:10px;
+  box-shadow:0px 0px 27px #999;
+  position:absolute;
+  z-index: 9999;
+  right: 310px;
+  top: 120px;
+}
