--- a/shopweb/web/styles/style.css
+++ b/shopweb/web/styles/style.css
@@ -7,11 +7,11 @@ html, body {
   height: 100%;
   margin: auto;
   font-family: Arial,Helvetica,sans-serif;
-  font-size: 81.2%;
+  font-size: 90%;
   line-height: 1.5em;
   background-color: white;
 } 
-
+    
 * {
     outline: medium none;
 }
@@ -35,18 +35,18 @@ h3 span {
   color: #99AA88;
 }
 
-a:link    { color: #000000; }
-a:visited { color: #000000;  }
-a:hover   { color: #999999; }
-a:active  { color: #999999; }
-
-a.otherLink:link    { color:red; text-decoration:none; }
-a.otherLink:visited { color:red; text-decoration:none; }
-a.otherLink:hover   { color:green; text-decoration:none; }
-a.otherLink:active  { color:red; text-decoration:none; }
+a:link    { color: #000000; text-decoration: none;}
+a:visited { color: #000000; text-decoration: none; }
+a:hover   { color: #999999; text-decoration: none;}
+a:active  { color: #999999; text-decoration: none;}
 
 .header {
   height: 100px;
+}
+
+.center {
+ width: 100%;
+ height:100%;
 }
 
 #site_name {
@@ -57,9 +57,6 @@ a.otherLink:active  { color:red; text-decoration:none; }
   margin-left: 10px;
 }
 
-.center {
-
-}
 
 .footer {
   border-width: 1px; 
@@ -129,7 +126,7 @@ a.otherLink:active  { color:red; text-decoration:none; }
 }
 
 .center #pright {
-  width: 600px;
+  width: 645px;
   float: left;
   margin-left: 20px;
 }
@@ -137,6 +134,18 @@ a.otherLink:active  { color:red; text-decoration:none; }
 #product_title {
   width: 100%;
   height: 40px;
+  float: right;
+  background-color: #000000;
+  color: #ffffff;
+}
+
+#product_title #title_text {
+  float: left;
+}
+
+#product_title h1 {
+ padding-left: 20px;
+ margin-top: 10px;
 }
 
 #cart_symbol {
@@ -146,8 +155,11 @@ a.otherLink:active  { color:red; text-decoration:none; }
 }
 
 #cart_content {
-  width: 600px;
-  height: 300px;
+  width: 420px;
+  max-height: 350px;
+  padding: 20px;
+  overflow-y: auto;
+  overflow-x:hidden;
 }
 
 #cart_popup {
@@ -161,4 +173,54 @@ a.otherLink:active  { color:red; text-decoration:none; }
   z-index: 9999;
   right: 310px;
   top: 120px;
+}
+
+
+#add_to_cart_box {
+  color: #EEB810;
+  float: right;
+  margin-right: 20px;
+}
+
+#add_to_cart {
+  color: #EEB810;
+}
+
+#add_to_cart:hover {
+  color: #FFC911;
+}
+
+#prod_details {
+  float: left;
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+#cart_content li {
+  float: left;
+  clear: left;
+}
+
+.cart_title {
+  font-size: 14px;
+  font-weight: bold;
+  color: #000000;
+}
+
+.cart_price {
+  font-size: 16px;
+  font-weight: bold;
+  color: #FFC911;
+}
+
+.cart_item {
+  float: left;
+  margin: 25px;
+  overflow: hidden;
+  width: 250px;
+}
+
+.cart_item ul li img {
+  margin-bottom: -6px; 
+  margin-left: 80px;
 }
