--- a/shopweb/web/templates/cartitem.html
+++ b/shopweb/web/templates/cartitem.html
@@ -6,12 +6,13 @@
     <span class="cart_title"></span>
    </li>
    <li>
-    Quantity: 
+    <span data-loc="quantity"/> 
     <input type="number" maxlength="3" size="3"/>
     <a href="#"><img src="images/close.png" onClick=""/></a>
    </li>
    <li>
-     Price: <span class="cart_price"></span>
+     <span data-loc="price"/>
+     <span class="cart_price"></span> RON
    </li>
   </ul>
  </div>
