--- a/shopweb/web/styles/style.css
+++ b/shopweb/web/styles/style.css
@@ -3,10 +3,10 @@ html, body {
   right: 0px;
   bottom: 0px;
   left: 0px;
-  max-width:980px;
+  max-width:1270px;
   height: 100%;
   margin: auto;
-  font-family: Arial,Helvetica,sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-size: 90%;
   line-height: 1.5em;
   background-color: white;
@@ -25,9 +25,7 @@ ul {
 
 li a {
   font-size: 18px;
-  font-weight: 700;
   text-decoration: none;
-  font-family: Arial,Helvetica,sans-serif;
   width: 100%
 }
 
@@ -50,11 +48,10 @@ a:active  { color: #999999; text-decoration: none;}
 }
 
 #site_name {
-  font-size: 32px;
-  font-weight: bold;
   color: #FFC911;
-  margin-top: 40px;
-  margin-left: 10px;
+  font-size: 32px;
+  position: relative;
+  top: 40px;
 }
 
 
@@ -68,6 +65,7 @@ a:active  { color: #999999; text-decoration: none;}
 .item_list {
   float: left;
   width: 100%;
+  margin-top: 30px;
 }
 
 .item_list ul {
@@ -103,7 +101,6 @@ a:active  { color: #999999; text-decoration: none;}
   text-align: right;
   color: #eeeeee;
   font-size: 22px;
-  font-weight: bold;
 }
 
 .info_tag_text {
@@ -113,13 +110,14 @@ a:active  { color: #999999; text-decoration: none;}
   text-align: left;
   color: #eeeeee;
   font-size: 16px;
-  font-weight: bold;
 }
 
 .cat_tag {
 }
 
 .cat_text {
+  font-size: 24px;
+  top: 26px;
 }
 
 .thumb {
@@ -131,12 +129,14 @@ a:active  { color: #999999; text-decoration: none;}
 .center #pleft {
   width: 312px;
   float: left;
+  margin-top: 20px;
 }
 
 .center #pright {
   width: 645px;
   float: left;
   margin-left: 20px;
+  margin-top: 20px;
 }
 
 #product_title {
@@ -145,6 +145,7 @@ a:active  { color: #999999; text-decoration: none;}
   float: right;
   background-color: #000000;
   color: #ffffff;
+  box-shadow:0px 12px 13px 0px rgba(50, 50, 50, 0.3);
 }
 
 #product_title #title_text {
@@ -152,7 +153,7 @@ a:active  { color: #999999; text-decoration: none;}
 }
 
 #product_title h1 {
- padding-left: 20px;
+ padding-left: 10px;
  margin-top: 10px;
 }
 
@@ -181,15 +182,17 @@ a:active  { color: #999999; text-decoration: none;}
   box-shadow:0px 0px 27px #999;
   position:absolute;
   z-index: 9999;
-  right: 310px;
-  top: 180px;
+  right: 165px;
+  top: 140px;
 }
 
 
 #add_to_cart_box {
   color: #EEB810;
   float: right;
-  margin-right: 20px;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 15px;
 }
 
 #add_to_cart {
@@ -213,14 +216,11 @@ a:active  { color: #999999; text-decoration: none;}
 
 .cart_title {
   font-size: 14px;
-  font-weight: bold;
   color: #000000;
 }
 
 .cart_price {
   font-size: 16px;
-  font-weight: bold;
-  color: #FFC911;
 }
 
 .cart_item {
@@ -232,7 +232,7 @@ a:active  { color: #999999; text-decoration: none;}
 
 .cart_item ul li img {
   margin-bottom: -6px; 
-  margin-left: 80px;
+  margin-left: 70px;
 }
 
 .error {
@@ -252,4 +252,21 @@ a:active  { color: #999999; text-decoration: none;}
   margin-left: 20px;
   margin-top: 20px;
   font-size: 18px;
+}
+
+.navigation {
+  float: left;
+  font-size: 16px;
+  position: relative;
+  width: 100%;
+}
+
+.navigation * {
+  position: relative;
+  top: 6px;
+}
+
+.detailPrice {
+  font-size: 32px;
+  margin-bottom: 20px;
 }
