--- a/shopweb/web/templates/cartitem.html
+++ b/shopweb/web/templates/cartitem.html
@@ -12,7 +12,8 @@
    </li>
    <li>
      <span data-loc="price"/>
-     <span class="cart_price"></span> RON
+     <span class="cart_price"></span> 
+     <span>RON</span>
    </li>
   </ul>
  </div>
