--- a/shopweb/web/styles/style.css
+++ b/shopweb/web/styles/style.css
@@ -84,6 +84,10 @@ a:active  { color: #999999; text-decoration: none;}
   height:356px;
 }
 
+.cat_box {
+  border: 1px solid #dddddd;
+}
+
 .info_tag {
   position: absolute;
   top: 280px;
@@ -91,7 +95,7 @@ a:active  { color: #999999; text-decoration: none;}
   width:312px;
   height:100%;
   margin: 0 3px 0 0;
-  background: rgba(100, 100, 100, .2);
+  background: rgba(100, 100, 100, .3);
 }
 
 .info_tag_price {
@@ -118,6 +122,7 @@ a:active  { color: #999999; text-decoration: none;}
 .cat_text {
   font-size: 24px;
   top: 26px;
+  color: #000000;
 }
 
 .thumb {
@@ -169,6 +174,7 @@ a:active  { color: #999999; text-decoration: none;}
   width: 420px;
   max-height: 350px;
   padding: 20px;
+  float: left;
   overflow-y: auto;
   overflow-x:hidden;
 }
@@ -186,7 +192,6 @@ a:active  { color: #999999; text-decoration: none;}
   top: 140px;
 }
 
-
 #add_to_cart_box {
   color: #EEB810;
   float: right;
@@ -203,6 +208,29 @@ a:active  { color: #999999; text-decoration: none;}
   color: #FFC911;
 }
 
+.cart_footer {
+  margin-bottom: 20px;
+  margin-top: 10px;
+  position: relative;
+  width: 100%;
+  font-size: 16px;
+  float: left;
+}
+
+.cart_footer a {
+  margin-right: 40px;
+  float: right;
+}
+
+.cart_footer #total {
+  float: left;
+  margin-left: 30px;
+}
+
+.cart_footer * {
+  margin-top: 10px;
+}
+
 #prod_details {
   float: left;
   margin-top: 20px;
@@ -215,7 +243,6 @@ a:active  { color: #999999; text-decoration: none;}
 }
 
 .cart_title {
-  font-size: 14px;
   color: #000000;
 }
 
@@ -225,7 +252,7 @@ a:active  { color: #999999; text-decoration: none;}
 
 .cart_item {
   float: left;
-  margin: 25px;
+  margin: 25px 25px 25px 25px;
   overflow: hidden;
   width: 250px;
 }
@@ -269,4 +296,25 @@ a:active  { color: #999999; text-decoration: none;}
 .detailPrice {
   font-size: 32px;
   margin-bottom: 20px;
+}
+
+#order {
+  float: left;
+  height: 200px;
+  padding: 45px 40px 20px; 20px
+  position: relative;
+  width: 330px;
+}
+
+#order input {
+  float: right;
+}
+
+#order form div {
+  width: 100%;
+  height: 25px;
+}
+
+#order form label {
+  text-align: right;
 }
