--- a/shopweb/web/templates/cartpopup.html
+++ b/shopweb/web/templates/cartpopup.html
@@ -1,24 +1,25 @@
      <div id="cart_popup">
+       <div id="cart_empty" data-loc="cart.empty"/>
+       <div id="cart_notice" />
        <div>
          <div id="cart_content">
          </div>
          <div id="order">
-           <form>
-             <div><label>Nume</label><input type="text"/></div>
-             <div><label>Prenume</label><input type="text"/></div>
-             <div><label>Judet/Sector</label><input type="text"/></div>
-             <div><label>Localitatea</label><input type="text"/></div>
-             <div><label>Adresa</label><input type="text"/></div>
-             <div><label>E-Mail</label><input type="text"/></div>
-             <div><label>Telefon</label><input type="number"/></div>
+           <form id="order_form">
+             <div><label for="lname" data-loc="order.last.name"></label><input id="lname" name="lname" type="text"/></div>
+             <div><label for="fname" data-loc="order.first.name"></label><input id="fname" name="fname" type="text"/></div>
+             <div><label for="region" data-loc="order.region"></label><input id="region" name="region" type="text"/></div>
+             <div><label for="city" data-loc="order.city"></label><input id="city" name="city" type="text"/></div>
+             <div><label for="address" data-loc="order.address"></label><input id="address" name="address" type="text"/></div>
+             <div><label for="email" data-loc="order.email"></label><input id="email" name="email" type="text"/></div>
+             <div><label for="phone" data-loc="order.phone"></label><input id="phone" name="phone" type="number"/></div>
            </form>
          </div>
        </div>
-       <div class="cart_footer">
+       <div id="cart_footer">
          <span id="total">0 RON</span>
          <a id="buy_step1" href="#" data-loc="buy_step1"/>
          <a id="buy_final" href="#" data-loc="buy_final"/>
-         <a id="buy_step_cancel" href="#" data-loc="buy_cancel"/>
        </div>
      </div>
      
