--- a/shopweb/web/styles/style.css
+++ b/shopweb/web/styles/style.css
@@ -16,6 +16,14 @@ html, body {
     outline: medium none;
 }
 
+input {
+  font-size: 16px;
+  height: 26px;
+  border: 1px solid #bbbbbb;
+  box-shadow: 0px 0px 15px 1px #dddddd;
+  font-family: 'Quicksand', sans-serif;
+}
+
 
 ul {
   list-style-type: none;
@@ -173,16 +181,17 @@ a:active  { color: #999999; text-decoration: none;}
 #cart_symbol {
   width: 32px;
   height: 32px;
-  float: right;
+  float: left;
   margin-top: 4px;
-  margin-right: 10px;
+  margin-left: 10px;
 }
 
 #cart_content {
   width: 420px;
-  max-height: 350px;
+  max-height: 400px;
   padding: 20px;
   float: left;
+  font-size: 16px;
   overflow-y: auto;
   overflow-x:hidden;
 }
@@ -196,29 +205,19 @@ a:active  { color: #999999; text-decoration: none;}
   box-shadow:0px 0px 27px #999;
   position:absolute;
   z-index: 9999;
-  right: 165px;
   top: 140px;
 }
 
 #add_to_cart_box {
-  color: #EEB810;
-  float: right;
+  float: left;
   font-size: 16px;
   font-weight: bold;
-  margin-top: 15px;
-}
-
-#add_to_cart {
-  color: #EEB810;
-}
-
-#add_to_cart:hover {
-  color: #FFC911;
+  margin-left: 30px;
 }
 
 #cart_footer {
   margin-bottom: 20px;
-  margin-top: 10px;
+  margin-top: 30px;
   position: relative;
   width: 100%;
   font-size: 16px;
@@ -245,6 +244,7 @@ a:active  { color: #999999; text-decoration: none;}
   padding: 20px;
   float: left;
   position: relative;
+  font-size: 16px;
 }
 
 #cart_notice {
@@ -254,14 +254,24 @@ a:active  { color: #999999; text-decoration: none;}
   float: left;
   position: relative;
   font-size: 16px;
-  font-weight: bold;
   color: #009900;
 }
 
-#prod_details {
+.prod_details {
   float: left;
   margin-top: 20px;
   font-size: 16px;
+}
+
+.prod_header {
+   width: 100%;
+   height: 70px;	
+   float: left;
+}
+
+.prod_desc {
+   width: 100%;	
+   float: left;
 }
 
 #cart_content li {
@@ -323,6 +333,7 @@ a:active  { color: #999999; text-decoration: none;}
 .detailPrice {
   font-size: 32px;
   margin-bottom: 20px;
+  float: left;
 }
 
 #order {
@@ -330,18 +341,24 @@ a:active  { color: #999999; text-decoration: none;}
   height: 200px;
   padding: 45px 40px 20px; 20px
   position: relative;
-  width: 330px;
+  width: 400px;
 }
 
 #order input {
   float: right;
+  font-size: 16px;
+  height: 26px;
+  width: 280px;  
 }
 
 #order form div {
   width: 100%;
-  height: 25px;
+  height: 35px;
 }
 
 #order form label {
   text-align: right;
+  font-size: 16px;
+  position: relative;
+  top: 5px;
 }
