--- a/shopweb/web/templates/order.html
+++ b/shopweb/web/templates/order.html
@@ -64,7 +64,7 @@ table {
 	width: 100%;
 }
 
-table tr td,th {
+table tr th {
 	border-bottom: 1px solid #dddddd;
 }
 
@@ -86,17 +86,18 @@ table tr td,th {
 #field {
 	color: #aaaaaa;
 }
-
 </style>
 </head>
 
 <body>
 	<div class="center">
 		<div>
-			<span data-loc="thank.you"></span>
+			<h1>I-Did</h1>
+			<br />
+			<h3 data-loc="thank.you"></h3>
 		</div>
 		<div class="order_info">
-			<table>
+			<table style="width: 400px">
 				<tr data-snip="info">
 					<td align="left"><span id="field"></span></td>
 					<td align="left"><span id="value"></span></td>
@@ -122,6 +123,9 @@ table tr td,th {
 				<span data-loc="total"></span> <span data-snip="total"></span>
 			</div>
 		</div>
+	</div>
+	<div>
+		<span data-loc="contact"></span><a href="www.idid.ro">www.idid.ro</a>
 	</div>
 </body>
 </html>
