--- a/shopweb/web/styles/style.css
+++ b/shopweb/web/styles/style.css
@@ -66,7 +66,6 @@ a:active {
 
 .center {
 	width: 100%;
-	height: 100%;
 }
 
 #site_name {
@@ -218,10 +217,14 @@ a:active {
 }
 
 #add_to_cart_box {
-	float: left;
-	font-size: 16px;
-	font-weight: bold;
-	margin-left: 30px;
+	box-shadow: 0px 0px 15px 1px #dddddd;
+	border: 1px solid #aaaaaa;
+	border-radius: 10px;
+    float: left;
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 30px;
+    padding: 10px;
 }
 
 #cart_footer {
@@ -340,9 +343,9 @@ a:active {
 }
 
 .detailPrice {
-	font-size: 32px;
-	margin-bottom: 20px;
-	float: left;
+    float: left;
+    font-size: 32px;
+    margin-top: 10px;
 }
 
 #order {
