--- a/shopweb/web/templates/order_ro.html
+++ b/shopweb/web/templates/order_ro.html
@@ -88,9 +88,9 @@ table tr th {
 <body>
 	<div class="center">
 		<div>
-			<h1>I-Did</h1>
+			<h1>iDid</h1>
 			<br />
-			<h3>Multumim pentru comnada facuta !</h3>
+			<h3>Multumim pentru comanda facuta !</h3>
 		</div>
 		<div class="order_info">
 			<table style="width: 400px" data-snip="info">
