--- a/shopweb/web/templates/cartitem.html
+++ b/shopweb/web/templates/cartitem.html
@@ -1,20 +1,11 @@
 <div data-snip="item">
- <img class="thumb"/> 
- <div class="cart_item">
-  <ul>
-   <li>
-    <span class="cart_title"></span>
-   </li>
-   <li>
-    <span data-loc="quantity"/> 
-    <input type="number" maxlength="3" size="3"/>
-    <a href="#"><img src="images/close.png" onClick=""/></a>
-   </li>
-   <li>
-     <span data-loc="price"/>
-     <span class="cart_price"></span> 
-     <span>RON</span>
-   </li>
-  </ul>
- </div>
+  <img class="thumb" />
+  <div class="cart_item">
+    <ul>
+      <li><span class="cart_title"></span></li>
+      <li><span data-loc="quantity" /> <input type="number" maxlength="3" size="3" /> <a href="#"><img src="images/close.png"
+          onClick="" /></a></li>
+      <li><span data-loc="price" /> <span class="cart_price"></span> <span>RON</span></li>
+    </ul>
+  </div>
 </div>
