--- a/shopweb/web/templates/header.html
+++ b/shopweb/web/templates/header.html
@@ -3,12 +3,12 @@
     <a href="/">iDid</a>
   </div>
   <div data-snip="cart_popup"></div>
-  <div data-snip="title" id="product_title">
+  <div id="product_title">
     <div id="cart_symbol">
       <a href="#"><img src="/images/cart.png" /></a>
     </div>
     <div id="title_text">
-      <h1 data-loc="categories"></h1>
+      <h1 data-snip="title"></h1>
     </div>
     <div id="search">
       <div>
