--- a/shopweb/web/styles/style.css
+++ b/shopweb/web/styles/style.css
@@ -78,7 +78,7 @@ a:active {
 
 .footer {
 	clear: both;
-	height: 100px;
+	height: 90px;
 	border-top: 1px solid #dddddd;
 }
 
@@ -141,6 +141,15 @@ a:active {
 	text-align: right;
 	color: #000000;
 	font-size: 22px;
+}
+
+.info_tag_icons {
+	position: relative;
+	top: 13px;
+	left: 10px;
+	text-align: left;
+	visibility: hidden;
+	float: left;
 }
 
 .info_tag_text {
@@ -356,6 +365,7 @@ a:active {
 	font-size: 16px;
 	position: relative;
 	width: 100%;
+	height: 30px
 }
 
 .navigation * {
