--- a/shopweb/web/templates/header.html
+++ b/shopweb/web/templates/header.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div id="site_name">
-    <a href="/">iDid</a>
+    <a href="/"><img src="/images/logo.png"/></a>
   </div>
   <div data-snip="cart_popup"></div>
   <div id="product_title">
