--- a/shopweb/web/styles/style.css
+++ b/shopweb/web/styles/style.css
@@ -61,7 +61,7 @@ a:active {
 }
 
 .header {
-	height: 100px;
+	height: 140px;
 }
 
 .wrap {
@@ -92,7 +92,7 @@ a:active {
 	color: #FFC911;
 	font-size: 32px;
 	position: relative;
-	top: 40px;
+	top: 15px;
 }
 
 #item_list {
@@ -182,7 +182,7 @@ a:active {
 }
 
 .center #pright {
-	width: 645px;
+	width: 910px;
 	float: left;
 	margin-left: 20px;
 	margin-top: 20px;
@@ -191,7 +191,7 @@ a:active {
 #product_title {
 	width: 100%;
 	height: 40px;
-	margin-top: 80px;
+	margin-top: 30px;
 	float: right;
 	background-color: #000000;
 	color: #ffffff;
@@ -434,4 +434,9 @@ a:active {
 #search img {
 	margin-top: 3px;
 	margin-left: 5px;
+}
+
+.product_content {
+	width: 100%;
+	height: 100%;
 }
