--- a/shopweb/web/templates/cartitem.html
+++ b/shopweb/web/templates/cartitem.html
@@ -3,7 +3,7 @@
   <div class="cart_item">
     <ul>
       <li><span class="cart_title"></span></li>
-      <li><span data-loc="quantity" /> <input type="number" maxlength="3" size="3" /> <a href="#"><img src="images/close.png"
+      <li><span data-loc="quantity" /> <input type="number" maxlength="3" size="3" /> <a href="#"><img src="/static/images/close.png"
           onClick="" /></a></li>
       <li><span data-loc="price" /> <span class="cart_price"></span> <span>RON</span></li>
     </ul>
