--- a/shopweb/web/templates/header.html
+++ b/shopweb/web/templates/header.html
@@ -1,11 +1,11 @@
 <div class="header">
   <div id="site_name">
-    <a href="/"><img src="/images/logo.png"/></a>
+    <a href="/"><img src="/static/images/logo.png"/></a>
   </div>
   <div data-snip="cart_popup"></div>
   <div id="product_title">
     <div id="cart_symbol">
-      <a href="#"><img src="/images/cart.png" /></a>
+      <a href="#"><img src="/static/images/cart.png" /></a>
     </div>
     <div id="title_text">
       <h1 data-snip="title"></h1>
@@ -14,7 +14,7 @@
       <div>
         <input id="search_text" type="text" />
       </div>
-      <img src="/images/search.png" />
+      <img src="/static/images/search.png" />
     </div>
   </div>
 </div>
