--- a/shopweb/web/static/styles/style.css
+++ b/shopweb/web/static/styles/style.css
@@ -238,13 +238,9 @@ a:active {
 }
 
 #add_to_cart_box {
-	box-shadow: 0px 0px 15px 1px #dddddd;
-	border: 1px solid #aaaaaa;
-	border-radius: 10px;
 	float: left;
 	font-size: 16px;
-	margin-left: 30px;
-	padding: 10px;
+	margin-top: 2px;
 }
 
 #cart_footer {
@@ -293,17 +289,20 @@ a:active {
 	float: left;
 	margin-top: 20px;
 	font-size: 16px;
+	width: 100%;
 }
 
 .prod_header {
 	width: 100%;
-	height: 70px;
+	height: 40px;
 	float: left;
+	border-bottom: 1px solid #dddddd;
 }
 
 .prod_desc {
 	width: 100%;
 	float: left;
+	margin-top: 10px;
 }
 
 #cart_content li {
@@ -364,11 +363,7 @@ a:active {
 	font-size: 16px;
 	position: relative;
 	width: 100%;
-	height: 30px
-}
-
-.navigation * {
-	position: relative;
+	height: 30px;
 	top: 6px;
 }
 
@@ -376,6 +371,7 @@ a:active {
 	float: left;
 	font-size: 32px;
 	margin-top: 10px;
+	margin-left: 10px;
 }
 
 #order {
@@ -440,3 +436,9 @@ a:active {
 	width: 100%;
 	height: 100%;
 }
+
+.sort {
+	float: left;
+	position: relative;
+}
+
