--- a/shopweb/web/templates/order_ro.html
+++ b/shopweb/web/templates/order_ro.html
@@ -156,7 +156,7 @@ table tr th {
 		<span>Toate preturile includ TVA. Plata se va efectua la livrare.</span>
 		<br />
 		<span>Pentru informatii suplimentare contactati-ne pe</span>
-		<span><a href="www.idid.ro">www.idid.ro</a></span>
+		<span><a href="mailto:office@idid.ro">office@idid.ro</a></span>
 	</div>
 </body>
 </html>
