--- a/shopweb/web/templates/header.html
+++ b/shopweb/web/templates/header.html
@@ -1,8 +1,6 @@
 <div class="header">
-  <div id="site_name">
-    <a href="/"><img src="/static/images/logo.png"/></a>
-  </div>
   <div data-snip="cart_popup"></div>
+  <div id="logo"><h1>I did</h1></div>
   <div id="product_title">
     <div id="cart_symbol">
       <a href="#"><img src="/static/images/cart.png" /></a>
@@ -14,7 +12,7 @@
       <div>
         <input id="search_text" type="text" />
       </div>
-      <img src="/static/images/search.png" />
+      <a href="#" id="gosearch"><img src="/static/images/search.png" /></a>
     </div>
   </div>
 </div>
