--- a/shopweb/web/static/styles/style.css
+++ b/shopweb/web/static/styles/style.css
@@ -46,6 +46,16 @@ a:link {
 	text-decoration: none;
 }
 
+.footer a:link {
+	color: #777777;
+	text-decoration: none;
+}
+
+.footer a:hover {
+	color: #999999;
+	text-decoration: none;
+}
+
 a:visited {
 	color: #000000;
 	text-decoration: none;
@@ -62,7 +72,9 @@ a:active {
 }
 
 .header {
-	height: 140px;
+	height: 60px;
+	background-color: #045584;
+	color: #ffffff;
 }
 
 .wrap {
@@ -81,6 +93,7 @@ a:active {
 	clear: both;
 	height: 90px;
 	border-top: 1px solid #dddddd;
+	background-color: #eeeeee;
 }
 
 .footer .center {
@@ -192,12 +205,8 @@ a:active {
 
 #product_title {
 	width: 100%;
-	height: 40px;
-	margin-top: 30px;
-	float: right;
-	background-color: #000000;
-	color: #ffffff;
-	float: right;
+	position: relative;
+	top: 10px;
 }
 
 #product_title #title_text {
@@ -214,7 +223,6 @@ a:active {
 	height: 32px;
 	float: left;
 	margin-top: 4px;
-	margin-left: 10px;
 }
 
 #cart_content {
@@ -236,7 +244,8 @@ a:active {
 	box-shadow: 0px 0px 27px #999;
 	position: absolute;
 	z-index: 9999;
-	top: 140px;
+	top: 60px;
+	color: #000000;
 }
 
 #add_to_cart_box {
@@ -423,10 +432,13 @@ a:active {
 }
 
 #search input {
-	background-color: #444444;
-	color: #ffffff;
+	background-color: #B7CBD7;
+	border: none;
+	box-shadow: 0 0 20px 1px #aaaaaa;
+	color: #000000;
 	border-radius: 10px;
 	width: 150px;
+	
 }
 
 #search img {
@@ -444,6 +456,14 @@ a:active {
 	position: relative;
 }
 
-.detailPrice strike, .info_tag_price strike {
+.detailPrice strike,.info_tag_price strike {
 	color: #ff5500;
+}
+
+#logo {
+	position: relative;
+	float:left;	
+	top: 20px;
+	left: 10px;
+	width: 70px;
 }
