--- a/shopweb/web/templates/footer.html
+++ b/shopweb/web/templates/footer.html
@@ -3,7 +3,7 @@
   <div class="center">
     <ul>
       <li>Copyright (c) 2014</li>
-      <li>Contact: office@idid.ro</li>
+      <li>Contact: <a href="mailto:office@idid.ro">office@idid.ro</a></li>
     </ul>
   </div>
 </div>
