--- a/shopweb/web/templates/cartpopup.html
+++ b/shopweb/web/templates/cartpopup.html
@@ -13,13 +13,22 @@
              <div><label for="address" data-loc="order.address"></label><input id="address" name="address" type="text"/></div>
              <div><label for="email" data-loc="order.email"></label><input id="email" name="email" type="text"/></div>
              <div><label for="phone" data-loc="order.phone"></label><input id="phone" name="phone" type="number"/></div>
+             <div>
+               <div id="terms_wrapper">
+                 <input id="terms" name="terms" type="checkbox"/>
+                 <label for="terms" data-loc="terms.and.conds"></label>
+               </div>
+               <div>
+                 <a id="terms_link" href="#" data-loc="terms.link"></a>
+               </div>
+             </div>
            </form>
          </div>
        </div>
        <div id="cart_footer">
          <span id="total">0 RON</span>
-         <a id="buy_step1" href="#" data-loc="buy_step1"/>
-         <a id="buy_final" href="#" data-loc="buy_final"/>
+         <a id="buy_step1" href="#" data-loc="buy_step1"></a>
+         <a id="buy_final" href="#" data-loc="buy_final"></a>
        </div>
      </div>
      
