--- a/shopweb/web/templates/cartpopup.html
+++ b/shopweb/web/templates/cartpopup.html
@@ -19,7 +19,7 @@
                  <label for="terms" data-loc="terms.and.conds"></label>
                </div>
                <div>
-                 <a id="terms_link" href="#" data-loc="terms.link"></a>
+                 <a id="terms_link" href="/terms" target="_blank" data-loc="terms.link"></a>
                </div>
              </div>
            </form>
