--- a/shopweb/web/templates/footer.html
+++ b/shopweb/web/templates/footer.html
@@ -4,6 +4,7 @@
     <ul>
       <li>Copyright (c) 2014</li>
       <li>Contact: <a href="mailto:office@idid.ro">office@idid.ro</a></li>
+      <li><a href="/terms" target="_blank" data-loc="terms.link"></a></li>
     </ul>
   </div>
 </div>
