--- a/shopweb/web/templates/header.html
+++ b/shopweb/web/templates/header.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div data-snip="cart_popup"></div>
-  <div id="logo"><h1>I did</h1></div>
+  <div id="logo"><a href="/"><h1>I did</h1></a></div>
   <div id="product_title">
     <div id="cart_symbol">
       <a href="#"><img src="/static/images/cart.png" /></a>
