--- a/shopweb/web/templates/header.html
+++ b/shopweb/web/templates/header.html
@@ -1,6 +1,5 @@
 <div class="header">
   <div data-snip="cart_popup"></div>
-  <div id="logo"><a href="/"><h1>I did</h1></a></div>
   <div id="product_title">
     <div id="cart_symbol">
       <a href="#"><img src="/static/images/cart.png" /></a>
@@ -14,5 +13,6 @@
       </div>
       <a href="#" id="gosearch"><img src="/static/images/search.png" /></a>
     </div>
+    <div id="logo"><a href="/"><img src="/static/images/idid-logo-gray-small.png"/></a></div>
   </div>
 </div>
