--- a/shopweb/web/templates/order_ro.html
+++ b/shopweb/web/templates/order_ro.html
@@ -88,7 +88,7 @@ table tr th {
 <body>
 	<div class="center">
 		<div>
-			<h1>iDid</h1>
+			<img data-snip="logo"/>
 			<br />
 			<h3>Multumim pentru comanda facuta !</h3>
 		</div>
