--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -75,7 +75,8 @@
         </div>
       </div>
     </div>
-    <div id="notice"></div>
+    <div id="notice_e"></div>
+    <div id="notice_i"></div>
     <div id="content"></div>
   </div>
 
