--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -527,10 +527,10 @@ a:active {
 	margin-top: 66px;
 }
 
-#notice_e {
+#notice_e, #notice_connect_e {
     background-color: #B43104;
     border: 1px solid #8A2908;
-    color: #F7BE81;
+    color: #ffffff;
     font-size: 20px;
     height: 28px;
     padding-top: 5px;
