--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -76,6 +76,7 @@
       </div>
     </div>
     <div id="notice_e"></div>
+    <div id="notice_connect_e" data-snip="connect_error"></div>
     <div id="notice_i"></div>
     <div id="content"></div>
   </div>
