--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -26,6 +26,9 @@
                 <label for="fname" data-loc="order.first.name"></label><input id="fname" name="fname" type="text" />
               </div>
               <div>
+                <label for="cnp" data-loc="order.cnp"></label><input id="cnp" name="cnp" type="text" />
+              </div>
+              <div>
                 <label for="region" data-loc="order.region"></label><input id="region" name="region" type="text" />
               </div>
               <div>
@@ -44,15 +47,17 @@
                 <div id="terms_wrapper">
                   <input id="terms" name="terms" type="checkbox" /> <label for="terms" data-loc="terms.and.conds"></label>
                 </div>
-                <div>
-                  <a id="terms_link" href="/terms" target="_blank" data-loc="terms.link"></a>
-                </div>
               </div>
             </form>
+            <div>
+               <a id="buy_final" href="#" data-loc="buy_final"></a>
+            </div>
           </div>
         </div>
         <div id="cart_footer">
-          <span id="total">0 RON</span> <a id="buy_step1" href="#" data-loc="buy_step1"></a> <a id="buy_final" href="#" data-loc="buy_final"></a>
+          <span id="total">0 RON</span> 
+          <a id="buy_step1" href="#" data-loc="buy_step1"></a> 
+          <a id="terms_link" href="/terms" target="_blank" data-loc="terms.link"></a>
         </div>
       </div>
 
